# lambda-netlify

./: .env.example  .gitignore  Cargo.toml  netlify.toml
netlify/functions/admin/: Cargo.toml
netlify/functions/admin/src/: main.rs
netlify/functions/admin/src/handlers/: admin_handler.rs
netlify/functions/blog/: Cargo.toml
netlify/functions/blog/src/: main.rs
netlify/functions/blog/src/handlers/: post_handler.rs
netlify/functions/dashboard/: Cargo.toml
netlify/functions/dashboard/src/: lib.rs  main.rs
netlify/functions/dashboard/src/handlers/: dashboard_handler.rs  mod.rs
netlify/functions/hello/: Cargo.toml
netlify/functions/hello-world/: Cargo.toml
netlify/functions/hello-world/src/: main.rs
netlify/functions/hello/src/: lib.rs.bak  main.rs
netlify/functions/hello/src/handlers/: playground_handler.rs
netlify/functions/hello/src/routes/: mod.rs  playground_routes.rs
netlify/functions/home/: Cargo.toml
netlify/functions/home/src/: lib.rs  main.rs
netlify/functions/home/src/handlers/: mod.rs  playground_handler.rs
netlify/functions/home/src/routes/: api_routes.rs  playground_routes.rs
netlify/functions/playground/: Cargo.toml
netlify/functions/playground/src/: main.rs
netlify/functions/user/: Cargo.toml
netlify/functions/user/src/: lib.rs  main.rs
netlify/functions/user/src/handlers/: user_handler.rs
public/: index.htm
shared_lib/: Cargo.toml
shared_lib/src/: lib.rs
shared_lib/src/database/: client.rs
shared_lib/src/models/: post.rs  user.rs
shared_lib/src/traits/: mod.rs  model_traits.rs
shared_lib/src/utils/: cookie.rs  cors.rs  mod.rs
src/functions/: main.rs
src/functions/hello-world/: hello-world.toml
