[workspace]
resolver = "2"
members = ["netlify/functions/playground"]

[workspace.dependencies]
lambda_runtime = "0.9.1"
aws_lambda_events = "0.13.1"
serde_json = "1.0"
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"]  }