[workspace]
resolver = "2"
members = [ "netlify/functions/admin", "netlify/functions/blog","netlify/functions/playground", "shared_lib"]

[workspace.dependencies]
lambda_runtime = "0.9.1"
aws_lambda_events = "0.14.0"
serde_json = "1.0"
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11.24", default-features = false, features = ["json", "rustls-tls"]  }
dotenvy = "0.15.7"
mongodb= "2.8.1"
validator = { version = "0.16.1", features = ["derive"] }
Inflector = "0.11.4"
futures-util = "0.3.30"
chrono = "0.4.34"
