[package]
name = "shared_lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
aws_lambda_events = { workspace = true }
lambda_runtime = { workspace = true }
mongodb = { workspace = true }
validator = { workspace = true }
Inflector = { workspace = true }
futures-util = { workspace = true }
chrono = { workspace = true }
cookie = { workspace = true }