[package]
name = "hello-world"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.9.1"
axum = { version = "0.7.4", features = ["multipart", "macros"] }
tower="0.4.13"
tower-http="0.5.1"
lambda_http="0.9.2"
aws_lambda_events = "0.13.1"
serde_json = "1.0"
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }