[package]
name = "rust-digest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.9.1"
aws_lambda_events = "0.13.1"
serde_json = "1.0"
serde = "1.0.196"
tokio = { version = "1", features = ["full"] }
# reqwest = { version = "0.11.24", features = ["json"] }
